--- a/OrdersTracker.html
+++ b/OrdersTracker.html
@@ -451,12 +451,12 @@
 			{
 				alert("Invalid max order size");
 			}
-			else if (action_type == 'buy' && available_fiat[execute_exchange] < size_crypto * price_fiat * (1 + 0.01 * transaction_fee))
+			else if (execute_exchange != "Best" && action_type == 'buy' && available_fiat[execute_exchange] < size_crypto * price_fiat * (1 + 0.01 * transaction_fee))
 			{
 				var required_fiat = size_crypto * price_fiat * (1 + 0.01 * transaction_fee);
 				alert("Insufficient funds: the order requires " + required_fiat.toFixed(2) + " USD");
 			}
-			else if (action_type == 'sell' && available_crypto[execute_exchange] < size_crypto)
+			else if (execute_exchange != "Best" && action_type == 'sell' && available_crypto[execute_exchange] < size_crypto)
 			{
 				alert("Insufficient funds: the order requires " + size_crypto + " " + crypto_type.value);
 			}
@@ -504,6 +504,15 @@
 					max_order_size_num = parseFloat(max_order_size.value);
 				}
 				btnExecute.disabled = true;
+				var exchanges = null;
+				if (exchange.value == "Best")
+				{
+					exchanges = ["Bitstamp", "Bitfinex"];
+				}
+				else
+				{
+					exchanges = [exchange.value];
+				}
 				var order_params = JSON.stringify({"action_type": action_type.value,
 												   "size_coin": size_coin.value,
 												   "crypto_type": crypto_type.value,
@@ -511,7 +520,7 @@
 												   "fiat_type": fiat_type.value,
 												   "duration_sec": action_order_duration * 60,
 												   "max_order_size": max_order_size_num,
-												   "exchange": exchange.value});
+												   "exchanges": exchanges});
 				var order_request = new XMLHttpRequest();
 				order_request.open("POST", "/SendOrder", true);
 				order_request.setRequestHeader("Content-Type", "application/json");
