Better names for orders

--- a/OrdersTracker.html
+++ b/OrdersTracker.html
@@ -240,8 +240,8 @@
 				<option value="buy" data-dict-value="buy">Buy</option>
 				<option value="timed_sell" data-dict-value="timed_sell">Timed Sell Taking</option>
 				<option value="timed_buy" data-dict-value="timed_buy">Timed Buy Taking</option>
-				<option value="buy_limit" data-dict-value="buy_limit">Buy Limit Making</option>
-				<option value="sell_limit" data-dict-value="buy_limit">Sell Limit Making</option>
+				<option value="sell_limit" data-dict-value="sell_limit">Timed Sell Making</option>				
+				<option value="buy_limit" data-dict-value="buy_limit">Timed Buy Making</option>
 			</select>
 			<select id="exchange" name="exchange">
 				<option value="Best" data-dict-value="best_exchange">Best Exchange</option>
